# remotePad

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yaml
client/: index.html
cmake/: ps4.cmake
include/: common_data.h  config.h  pad.h  user.h  utils.h
lib/: CMakeLists.txt  goldhen.patch
src/: common_data.c  config.c  main.c  pad.c  user.c  utils.c
src/pad/: dummy.c  usb.c  ws.c
